--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "immutable": "^4.0.0-rc.12",
     "jss": "^9.8.7",
     "normalizr": "^3.3.0",
-    "react": "^16.7.0",
+    "react": "^16.8.0-alpha.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-transition-group": "^2.5.3",
