--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "immutable": "^4.0.0-rc.12",
     "jss": "^9.8.7",
     "normalizr": "^3.3.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
@@ -32,7 +32,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.1",
+    "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   }
