--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "bluebird": "^3.5.3",
+    "events": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "jss": "^9.8.7",
     "normalizr": "^3.3.0",
