--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "events": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "jss": "^9.8.7",
+    "mitt": "^1.1.3",
     "normalizr": "^3.3.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
