--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
     "events": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "jss": "^9.8.7",
-    "mitt": "^1.1.3",
     "normalizr": "^3.3.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-redux": "^6.0.0",
     "react-transition-group": "^2.5.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "zen-observable": "^0.8.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
